--- a/style/style.css
+++ b/style/style.css
@@ -349,8 +349,8 @@ button {
   flex-direction: column;
   align-items: center;
 }
-.btn-login,
-.btn-signup {
+.main__btn-login,
+.main__btn-signup {
   margin-top: 2rem;
   width: 45rem;
 }
@@ -692,8 +692,8 @@ form > div {
     width: 100%;
     font-size: 1.8rem;
   }
-  .btn-login,
-  .btn-signup {
+  .main__btn-login,
+  .main__btn-signup {
     width: 100%;
   }
   /* --------------------- Toast Container--------------------- **/
