style: add 1rem padding to .modal-screen for screens under 576px

--- a/style/style.css
+++ b/style/style.css
@@ -697,6 +697,9 @@ form > div {
   .glass-card {
     padding: 0.5rem;
   }
+  .modal-screen{
+    padding: 1rem;
+  }
   /* --------------------- Header Bottom Wrapper --------------------- **/
   .header__bottom-wrapper {
     flex-direction: column;
